# python3-wiimote

./: .gitignore  .travis.yml  CHANGELOG  Makefile.in  NEWS  README.md  configure.ac  defs.mak.in
libcwiid/: cwiid.pc.in
python/: Makefile.in  Wiimote.c  cwiidmodule.c  setup.py
